avoid overflow of expression

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@
     margin: 0;
     word-wrap: break-word;
     display: inline-block;
+    overflow: hidden;
 }
 
 #btn-container{
